<resources>
    <string name="app_name" translatable="false">ToDo</string>
    <string name="supervised_by_mohamed_nabil" translatable="false">supervised by Mohamed Nabil</string>
    <string name="to_do_list">To Do list</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_text">Edit task</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_new_task">Add new task</string>
    <string name="task_list">Task List</string>
    <string name="settings">Settings</string>
    <string name="english" translatable="false">English</string>
    <string name="light" translatable="false">Light</string>
    <string name="do_you_want_to_delete_this_task">Are you sure want to delete this task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string-array name="language_array">
        <item>
            English
        </item>
        <item>
            العربيه
        </item>
    </string-array>

    <string-array name="mode_array">
        <item>
            Light
        </item>
        <item>
            Dark
        </item>
    </string-array>
</resources>